Added further enhancements
