# benchmark/src/main/java/com/orpheum/benchmark/airgpt/model/AirGptConversation.java
@@ -1,6 +1,7 @@
 package com.orpheum.benchmark.airgpt.model;
 
 import com.orpheum.benchmark.model.AbstractEntity;
+import com.orpheum.benchmark.model.PricingStrategyMode;
 import lombok.Value;
 import lombok.With;
 import org.springframework.data.annotation.CreatedDate;
@@ -22,14 +23,15 @@ public class AirGptConversation extends AbstractEntity<UUID, AirGptConversation>
     UUID id;
     String title;
     String internalGroupId;
+    PricingStrategyMode pricingStrategy;
 
     // @CreatedDate and @LastModifiedDate do not support OffsetDateTime
     @CreatedDate
     LocalDateTime timestampCreated;
 
     @PersistenceCreator
-    public static AirGptConversation create(UUID id, String title, String internalGroupId) {
-        return new AirGptConversation(id, title, internalGroupId, null);
+    public static AirGptConversation create(UUID id, String title, String internalGroupId, PricingStrategyMode pricingStrategy) {
+        return new AirGptConversation(id, title, internalGroupId, pricingStrategy, null);
     }
 
 }
